<resources>
    <string name="app_name" translatable="false">Challenge Sophos</string>
    <!-- Login fragment -->
    <string name="Legend">Ingresa tus datos para acceder</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="fingerprint_btn">Ingresar con huella</string>
    <string name="login_btn">Ingresar</string>
    <string name="login_error">Correo o contraseña incorrectos</string>
    <string name="auth_error">Error de autenticación:</string>
    <string name="auth_succeeded">¡Autenticación exitosa!</string>
    <string name="auth_failed">Autenticación fallida</string>
    <string name="biometric_tittle">Acceso Biométrico Sophos</string>
    <string name="biometric_subtitle">Ingresa usando las credenciales biométricas</string>
    <string name="biometric_negative">Usar email y contraseña</string>
    <string name="biomanager_success">Autenticación biométrica disponible</string>
    <string name="biomanager_error_hardware">Autenticación biométrica no disponible en este dispositivo</string>
    <string name="biomanaer_error_hw">Autenticación biométrica no disponible actualmente</string>
    <string name="validate_email">El campo debe corresponder al correo</string>
    <string name="alert_title">Uso de autenticación biométrica</string>
    <string name="alert_message">Para usar esta función debe acceder con su correo y contraseña la primera vez</string>

    <!-- Welcome fragment -->
    <string name="welcome">Bienvenido</string>
    <string name="welcoming_legend">Estas son las opciones que tenemos para ti</string>
    <string name="send_documents">Enviar documentos</string>
    <string name="see_documents">Ver documentos</string>
    <string name="offices">Oficinas</string>
    <string name="btn_continue">Ingresar</string>

    <!-- Menu -->
    <string name="dark_mode">Modo oscuro</string>
    <string name="light_mode">Modo claro</string>
    <string name="English_language">Idioma Inglés</string>
    <string name="logout">Cerrar sesión</string>
    <string name="come_back">Regresar</string>

    <!-- Send docs -->
    <string name="send_docs">Envío de documentación</string>
    <string name="document_number">Número de documento</string>
    <string name="names">Nombres</string>
    <string name="Last_name">Apellidos</string>
    <string name="Document">Documento</string>
    <string name="Send">Enviar</string>
    <string name="city">Ciudad</string>
    <string name="toast_sent">Documento enviado</string>
    <string name="toast_sent_fail">Por favor llenar TODOS los campos</string>
    <string name="ask_camera_permission">El permiso fue previamente denegado, habilítelo en configuraciones.</string>
    <string name="activity_result_msg">La foto no fue tomada</string>
    <string name="acivity_msg2">la imagen no fue cargada</string>
    <string name="already_sending">Actualmente en envío de documentación</string>
    <string name="attached_type">Tipo de adjunto</string>
    <string name="type_ID">Tipo de documento</string>

    <!-- See docs -->
    <string name="Documents">Documentos</string>
    <string name="already_seeing">Actualmente en documentos</string>

    <!-- Offices -->
    <string name="location_permission">Habilite el permiso de localización en la configuración</string>
    <string name="already_offices">Actualmente en oficinas</string>
    <string name="sophos_logo">Sophos\' Logo</string>


</resources>