<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SendDocsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="455dp"
        android:layout_marginTop="70dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/send_docs"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/ivTakePhotoDocs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_add_a_photo" />

        <Spinner
            android:id="@+id/spDocType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"

            />

        <EditText
            android:id="@+id/etIDNumberSendDocs"
            style="@style/styleSendDocsTexts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/document_number"
            android:drawableStart="@drawable/ic_badge_light"
            android:drawablePadding="20dp"

            />

        <EditText
            android:id="@+id/etNamesSendDocs"
            style="@style/styleSendDocsTexts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/names"

            />

        <EditText
            android:id="@+id/etLastNameSendDocs"
            style="@style/styleSendDocsTexts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Last_name" />

        <EditText
            android:id="@+id/etEmailSendDocs"
            style="@style/styleSendDocsTexts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/etDocTypeSendDocs"
            style="@style/styleSendDocsTexts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/document_type" />

        <Spinner
            android:id="@+id/spDocCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="38dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"

            />




    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAttachDoc"
            style="@style/styleLoginBtn1Light"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/sophosPink"
            android:text="@string/Document"
            android:drawableStart="@drawable/ic_btn_attach"
            android:paddingStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="40dp"
             />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSendDoc"
            style="@style/styleLoginBtn1Light"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="@color/sophosPink"
            android:text="@string/Send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAttachDoc" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>